--- a/india.html
+++ b/india.html
@@ -11,7 +11,7 @@
 	<h2>Country</h2>
 	<a href="">Nepal</a>
 	<a href="">India</a>
-	<a href="">China</a>
+	<a href="">uk</a>
 	<a href="">Bhutan</a>
 	<a href="">Pakis</a>
 	<a href="">Lanka</a>
